--- a/portfolio.html
+++ b/portfolio.html
@@ -22,10 +22,10 @@
 <div class="col-md-12 text-center">
 <h1 class="mb-4"><a href="index.html" class="logo">Beckham Muff</a></h1>
 <ul>
-<li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
+<li><a href="index.html"><span><small>01</small>Home</span></a></li>
 <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
 <li><a href="services.html"><span><small>03</small>Services</span></a></li>
-<li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
+<li class="active"><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
 <li><a href="blog.html"><span><small>05</small>Blog</span></a></li>
 <li><a href="contact.html"><span><small>06</small>Contact</span></a></li>
 </ul>
@@ -47,101 +47,8 @@
 </div>
 </div>
 </header>
-<section class="home-slider owl-carousel js-fullheight">
-<div class="slider-item js-fullheight">
-<div class="overlay"></div>
-<div class="container">
-<div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
-<div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-<p><a href="#" class="scroll">Hello! I'm</a></p>
-<h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Beckham Muff</h1>
-</div>
-</div>
-</div>
-</div>
-<div class="slider-item js-fullheight">
-<div class="overlay"></div>
-<div class="container">
-<div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
-<div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-<p><a href="#" class="scroll">I'm from Berlin</a></p>
-<h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">A Web Designer</h1>
-</div>
-</div>
-</div>
-</div>
-</section>
-
-<section class="ftco-section about-section">
-<div class="container">
-<div class="row d-flex" data-scrollax-parent="true">
-<div class="col-md-4 author-img" style="background-image:url(images/author-1.jpg)" data-scrollax=" properties: { translateY: '-70%'}"></div>
-<div class="col-md-2"></div>
-<div class="col-md-6 wrap ftco-animate">
-<div class="about-desc">
-<h1 class="bold-text">About</h1>
-<div class="p-5">
-<h2 class="mb-5">Hi! I'm Beckham Muff</h2>
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in.</p>
-<p><a href="#">Checkout my resume</a></p>
-<ul class="ftco-footer-social list-unstyled mt-4">
-<li><a href="#"><span class="icon-twitter"></span></a></li>
-<li><a href="#"><span class="icon-facebook"></span></a></li>
-<li><a href="#"><span class="icon-instagram"></span></a></li>
-</ul>
-<h5>Contact me here!</h5>
-<p>Email: <a href="#"><span class="__cf_email__" data-cfemail="e2808781898a838fa2878f838b8e">[email&#160;protected]</span></a></p>
-<p>Phone: <a href="#">(123)-456-789</a></p>
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
 <section class="ftco-section">
-<div class="container">
-<div class="row justify-content-center mb-5 pb-5">
-<div class="col-md-7 text-center heading-section ftco-animate">
-<span>What i do</span>
-<h2>My services</h2>
-</div>
-</div>
-<div class="row">
-<div class="col-md-4 d-flex align-self-stretch ftco-animate">
-<div class="media block-6 services p-3 py-4 d-block text-center">
-<div class="icon mb-3"><span class="icon-layers"></span></div>
-<div class="media-body">
-<h3 class="heading">UI/UX Design</h3>
-<h3 class="heading">Mobile App Design</h3>
-<h3 class="heading">Responsive Design</h3>
-</div>
-</div>
-</div>
-<div class="col-md-4 d-flex align-self-stretch ftco-animate">
-<div class="media block-6 services p-3 py-4 d-block text-center">
-<div class="icon mb-3"><span class="icon-gears"></span></div>
-<div class="media-body">
-<h3 class="heading">Product Strategy</h3>
-<h3 class="heading">Design Sprints</h3>
-<h3 class="heading">UX Strategy</h3>
-</div>
-</div>
-</div>
-<div class="col-md-4 d-flex align-self-stretch ftco-animate">
-<div class="media block-6 services p-3 py-4 d-block text-center">
-<div class="icon mb-3"><span class="icon-code"></span></div>
-<div class="media-body">
-<h3 class="heading">HTML/CSS</h3>
-<h3 class="heading">Prototyping</h3>
-<h3 class="heading">User Testing</h3>
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
-<section class="ftco-section">
-<div class="container">
+<div class="container mt-5">
 <div class="row justify-content-center mb-5 pb-5">
 <div class="col-md-7 text-center heading-section ftco-animate">
 <span>Portfolio</span>
@@ -228,43 +135,18 @@
 </div>
 </div>
 </div>
-</div>
-</section>
-<section class="ftco-section ftco-counter" id="section-counter">
-<div class="container">
-<div class="row justify-content-center mb-5 pb-5">
-<div class="col-md-7 text-center heading-section ftco-animate">
-<span>Portfolio</span>
-<h2>I love to share my achievements</h2>
-</div>
-</div>
-<div class="row d-flex justify-content-start">
-<div class="col-md-5 col-sm-5 counter-wrap ftco-animate">
-<div class="block-18">
-<div class="text">
-<span class="ftco-label">Clients</span>
-<strong class="number" data-number="420">0</strong>
-</div>
-</div>
-</div>
-</div>
-<div class="row d-flex justify-content-center">
-<div class="col-md-5 col-sm-5 counter-wrap ftco-animate">
-<div class="block-18">
-<div class="text">
-<span class="ftco-label">Project done</span>
-<strong class="number" data-number="890">0</strong>
-</div>
-</div>
-</div>
-</div>
-<div class="row d-flex justify-content-end">
-<div class="col-md-5 counter-wrap ftco-animate">
-<div class="block-18">
-<div class="text">
-<span class="ftco-label">Cups of coffee</span>
-<strong class="number" data-number="1000">0</strong>
-</div>
+<div class="row mt-5">
+<div class="col text-center">
+<div class="block-27">
+<ul>
+<li><a href="#">&lt;</a></li>
+<li class="active"><span>1</span></li>
+<li><a href="#">2</a></li>
+<li><a href="#">3</a></li>
+<li><a href="#">4</a></li>
+<li><a href="#">5</a></li>
+<li><a href="#">&gt;</a></li>
+</ul>
 </div>
 </div>
 </div>
@@ -283,7 +165,7 @@
 </div>
 <div class="ftco-footer-widget">
 <h2 class="mb-3">Contact Us</h2>
-<p class="h3 email"><a href="#"><span class="__cf_email__" data-cfemail="036a6d656c43666e626a6f2d606c6e">[email&#160;protected]</span></a></p>
+<p class="h3 email"><a href="#"><span class="__cf_email__" data-cfemail="4920272f26092c24282025672a2624">[email&#160;protected]</span></a></p>
 </div>
 </div>
 </div>
@@ -326,6 +208,6 @@ Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728
 
   gtag('config', 'UA-23581568-13');
 </script>
-<script defer="" src="../../beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"6c28d07a1d953228","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.12.0","si":100}' crossorigin="anonymous"></script>
+<script defer="" src="../../beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"6c28d0b8bc1b850d","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.12.0","si":100}' crossorigin="anonymous"></script>
 </body>
 </html>
