--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="../../css.css?family=Poppins:300,400,700" rel="stylesheet">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/KG_logo.png">
   <link rel="stylesheet"
     href="css/A.open-iconic-bootstrap.min.css animate.css owl.carousel.min.css owl.theme.default.min.css magnific-popup.css aos.css ionicons.min.css bootstrap-datepicker.css jquery.timepicker.css flaticon.css icomoon.cs.css">
 </head>
@@ -19,7 +20,7 @@
     <nav id="colorlib-main-nav" role="navigation">
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
       <div class="js-fullheight colorlib-table">
-        <div class="img" style="background-image:url(images/author-2.jpg)"></div>
+        <div class="img" style="background-image:url(images/developer-2.jpg)"></div>
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
@@ -44,8 +45,7 @@
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
                 <a class="colorlib-logo" href="index.html"><span class="logo-img"
-                    style="background-image:url(images/xperson_1.jpg.pagespeed.ic.P4pHl6glbj.jpg)"></span>Beckham
-                  Muff</a>
+                    style="background-image:url(images/KG_logo.png)"></span>Kartik Gupta</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -71,7 +71,7 @@
             <div class="row slider-text align-items-center text-center justify-content-center"
               data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                <p><a href="#" class="scroll">I'm from Berlin</a></p>
+                <p><a href="#" class="scroll">I'm from Indore</a></p>
                 <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">A Web Designer</h1>
               </div>
             </div>
@@ -82,14 +82,14 @@
       <section class="ftco-section about-section">
         <div class="container">
           <div class="row d-flex" data-scrollax-parent="true">
-            <div class="col-md-4 author-img" style="background-image:url(images/author-1.jpg)"
+            <div class="col-md-4 author-img" style="background-image:url(images/developer-1.jpg)"
               data-scrollax=" properties: { translateY: '-70%'}"></div>
             <div class="col-md-2"></div>
             <div class="col-md-6 wrap ftco-animate">
               <div class="about-desc">
                 <h1 class="bold-text">About</h1>
                 <div class="p-5">
-                  <h2 class="mb-5">Hi! I'm Beckham Muff</h2>
+                  <h2 class="mb-5">Hi! I'm Kartik Gupta</h2>
                   <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
                     the blind texts. Separated they live in.</p>
                   <p><a href="#">Checkout my resume</a></p>
