--- a/index.html
+++ b/index.html
@@ -316,20 +316,19 @@
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#"><span class="__cf_email__"
-                      data-cfemail="036a6d656c43666e626a6f2d606c6e">[email&#160;protected]</span></a></p>
+                <p class="h3 email"><a href="mailto:hope.kartik@gmail.com"><span class="__cf_email__"
+                      data-cfemail="036a6d656c43666e626a6f2d606c6e">hope.kartik@gmail.com</span></a></p>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 text-center">
               <p>
-                Copyright &copy;<script data-cfasync="false"
+                Kartik Gupta &copy;<script data-cfasync="false"
                   src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                 <script>
                   document.write(new Date().getFullYear());
-                </script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"
-                  style="color: red;"></i> by <a href="../../index.htm" target="_blank">Colorlib</a>
+                </script> 
               </p>
             </div>
           </div>
