--- a/contact.html
+++ b/contact.html
@@ -1,152 +1,213 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
-<title>Beckham - Free Bootstrap 4 Template by Colorlib</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link href="../../css.css?family=Poppins:300,400,700" rel="stylesheet">
-<link rel="stylesheet" href="css/A.open-iconic-bootstrap.min.css animate.css owl.carousel.min.css owl.theme.default.min.css magnific-popup.css aos.css ionicons.min.css bootstrap-datepicker.css jquery.timepicker.css flaticon.css icomoon.cs.css">
+  <title>Beckham - Free Bootstrap 4 Template by Colorlib</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="../../css.css?family=Poppins:300,400,700" rel="stylesheet">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/KG_logo.png">
+  <link rel="stylesheet"
+    href="css/A.open-iconic-bootstrap.min.css animate.css owl.carousel.min.css owl.theme.default.min.css magnific-popup.css aos.css ionicons.min.css bootstrap-datepicker.css jquery.timepicker.css flaticon.css icomoon.cs.css">
 </head>
+
 <body>
-<div class="KW_progressContainer">
-<div class="KW_progressBar">
-</div>
-</div>
-<div class="page">
-<nav id="colorlib-main-nav" role="navigation">
-<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
-<div class="js-fullheight colorlib-table">
-<div class="img" style="background-image:url(images/author-2.jpg)"></div>
-<div class="colorlib-table-cell js-fullheight">
-<div class="row no-gutters">
-<div class="col-md-12 text-center">
-<h1 class="mb-4"><a href="index.html" class="logo">Beckham Muff</a></h1>
-<ul>
-<li><a href="index.html"><span><small>01</small>Home</span></a></li>
-<li><a href="about.html"><span><small>02</small>Resume</span></a></li>
-<li><a href="services.html"><span><small>03</small>Services</span></a></li>
-<li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-<li><a href="blog.html"><span><small>05</small>Blog</span></a></li>
-<li class="active"><a href="contact.html"><span><small>06</small>Contact</span></a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</nav>
-<div id="colorlib-page">
-<header>
-<div class="container">
-<div class="row">
-<div class="col-md-12">
-<div class="colorlib-navbar-brand">
-<a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image:url(images/xperson_1.jpg.pagespeed.ic.P4pHl6glbj.jpg)"></span>Beckham Muff</a>
-</div>
-<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
-</div>
-</div>
-</div>
-</header>
-<section class="ftco-section contact-section">
-<div class="container mt-5">
-<div class="row d-flex mb-5 contact-info">
-<div class="col-md-12 mb-4">
-<h2 class="h4">Contact Information</h2>
-</div>
-<div class="w-100"></div>
-<div class="col-md-3">
-<p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
-</div>
-<div class="col-md-3">
-<p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
-</div>
-<div class="col-md-3">
-<p><span>Email:</span> <a href="/cdn-cgi/l/email-protection#fe97909891be87918b8c8d978a9bd09d9193"><span class="__cf_email__" data-cfemail="026b6c646d427b6d7770716b76672c616d6f">[email&#160;protected]</span></a></p>
-</div>
-<div class="col-md-3">
-<p><span>Website:</span> <a href="#">yoursite.com</a></p>
-</div>
-</div>
-<div class="row block-9">
-<div class="col-md-6 pr-md-5">
-<form method="post" action="contact.php">
-<div class="form-group">
-<input type="text" name="name" class="form-control" placeholder="Your Name">
-</div>
-<div class="form-group">
-<input type="text" name="email" class="form-control" placeholder="Your Email">
-</div>
-<div class="form-group">
-<input type="text" name="subject" class="form-control" placeholder="Subject">
-</div>
-<div class="form-group">
-<textarea name="" id="" cols="30" rows="7" class="form-control" name="message" placeholder="Message"></textarea>
-</div>
-<div class="form-group">
-<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
-</div>
-</form>
-</div>
-<div class="col-md-6" id="map"></div>
-</div>
-</div>
-</section>
-<footer class="ftco-footer ftco-bg-dark ftco-section">
-<div class="container">
-<div class="row mb-5 justify-content-center">
-<div class="col-md-5 text-center">
-<div class="ftco-footer-widget mb-5">
-<ul class="ftco-footer-social list-unstyled">
-<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-</ul>
-</div>
-<div class="ftco-footer-widget">
-<h2 class="mb-3">Contact Us</h2>
-<p class="h3 email"><a href="#"><span class="__cf_email__" data-cfemail="e881868e87a88d85898184c68b8785">[email&#160;protected]</span></a></p>
-</div>
-</div>
-</div>
-<div class="row">
-<div class="col-md-12 text-center">
-<p>
-Kartik Gupta &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script>
-</p>
-</div>
-</div>
-</div>
-</footer>
+  <div class="KW_progressContainer">
+    <div class="KW_progressBar">
+    </div>
+  </div>
+  <div class="page">
+    <nav id="colorlib-main-nav" role="navigation">
+      <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
+      <div class="js-fullheight colorlib-table">
+        <div class="img" style="background-image:url(images/author-2.jpg)"></div>
+        <div class="colorlib-table-cell js-fullheight">
+          <div class="row no-gutters">
+            <div class="col-md-12 text-center">
+              <h1 class="mb-4"><a href="index.html" class="logo">Kartik Gupta</a></h1>
+              <ul>
+                <li><a href="index.html"><span><small>01</small>Home</span></a></li>
+                <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
+                <li><a href="services.html"><span><small>03</small>Services</span></a></li>
+                <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
+                <li><a href="blog.html"><span><small>05</small>Blog</span></a></li>
+                <li class="active"><a href="contact.html"><span><small>06</small>Contact</span></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div id="colorlib-page">
+      <header>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="colorlib-navbar-brand">
+                <a class="colorlib-logo" href="index.html"><span class="logo-img"
+                  style="background-image:url(images/KG_logo.png)"></span>Kartik Gupta</a>
+              </div>
+              <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
+            </div>
+          </div>
+        </div>
+      </header>
+      <section class="ftco-section contact-section">
+        <div class="container mt-5">
+          <div class="row d-flex mb-5 contact-info">
+            <div class="col-md-12 mb-4">
+              <h2 class="h4">Contact Information</h2>
+            </div>
+            <div class="w-100"></div>
+            <div class="col-md-3">
+              <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+            </div>
+            <div class="col-md-3">
+              <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+            </div>
+            <div class="col-md-3">
+              <p><span>Email:</span> <a href="/cdn-cgi/l/email-protection#fe97909891be87918b8c8d978a9bd09d9193"><span
+                    class="__cf_email__"
+                    data-cfemail="026b6c646d427b6d7770716b76672c616d6f">[email&#160;protected]</span></a></p>
+            </div>
+            <div class="col-md-3">
+              <p><span>Website:</span> <a href="#">yoursite.com</a></p>
+            </div>
+          </div>
+          <div class="row block-9">
+            <div class="col-md-6 pr-md-5">
+              <form method="post" action="contact.php">
+                <div class="form-group">
+                  <input type="text" name="name" class="form-control" placeholder="Your Name">
+                </div>
+                <div class="form-group">
+                  <input type="text" name="email" class="form-control" placeholder="Your Email">
+                </div>
+                <div class="form-group">
+                  <input type="text" name="subject" class="form-control" placeholder="Subject">
+                </div>
+                <div class="form-group">
+                  <textarea name="" id="" cols="30" rows="7" class="form-control" name="message"
+                    placeholder="Message"></textarea>
+                </div>
+                <div class="form-group">
+                  <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+                </div>
+              </form>
+            </div>
+            <div class="col-md-6" id="map"></div>
+          </div>
+        </div>
+      </section>
+      <footer class="ftco-footer ftco-bg-dark ftco-section">
+        <div class="container">
+          <div class="row mb-5 justify-content-center">
+            <div class="col-md-5 text-center">
+              <div class="ftco-footer-widget mb-5">
+                <ul class="ftco-footer-social list-unstyled">
+                  <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+                  <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
+                  <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                </ul>
+              </div>
+              <div class="ftco-footer-widget">
+                <h2 class="mb-3">Contact Us</h2>
+                <p class="h3 email"><a href="#"><span class="__cf_email__"
+                      data-cfemail="e881868e87a88d85898184c68b8785">[email&#160;protected]</span></a></p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <p>
+                Kartik Gupta &copy;<script data-cfasync="false"
+                  src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                <script>
+                  document.write(new Date().getFullYear());
+                </script>
+              </p>
+            </div>
+          </div>
+        </div>
+      </footer>
 
-<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"></circle><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"></circle></svg></div>
-</div>
-</div>
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery-migrate-3.0.1.min.js popper.min.js bootstrap.min.js jquery.easing.1.3.js.pagespeed.jc.cJU2nST1rd.js"></script><script>eval(mod_pagespeed_rVm3b6OPfk);</script>
-<script>eval(mod_pagespeed_LPyuAhQnNQ);</script>
-<script>eval(mod_pagespeed_CUI$FcHZ3n);</script>
-<script>eval(mod_pagespeed_uu3xvHn3aM);</script>
-<script src="js/jquery.waypoints.min.js jquery.stellar.min.js owl.carousel.min.js jquery.magnific-popup.min.js.pagespeed.jc.OS2-fzYR9P.js"></script><script>eval(mod_pagespeed_bnqGepMR5q);</script>
-<script>eval(mod_pagespeed_aLNiYpeva5);</script>
-<script>eval(mod_pagespeed_gRe8OWKk8x);</script>
-<script>eval(mod_pagespeed_iLrrPnlANI);</script>
-<script src="js/aos.js jquery.animateNumber.min.js scrollax.min.js bootstrap-datepicker.js jquery.timepicker.min.js google-map.js.pagespeed.jc.yIWJqF4mH7.js"></script><script>eval(mod_pagespeed_zEQqWyOm9T);</script>
-<script>eval(mod_pagespeed_tWYv1TXJtB);</script>
-<script>eval(mod_pagespeed_06R1GUdeKg);</script>
-<script>eval(mod_pagespeed_l1Joqva7dO);</script>
-<script>eval(mod_pagespeed_GIt_XDyLcs);</script>
-<script src="../../maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-<script>eval(mod_pagespeed_yzNEB6woqD);</script>
-<script src="js/main.js"></script>
+      <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+          <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"></circle>
+          <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
+            stroke="#F96D00"></circle>
+        </svg></div>
+    </div>
+  </div>
+  <script src="js/jquery.min.js"></script>
+  <script
+    src="js/jquery-migrate-3.0.1.min.js popper.min.js bootstrap.min.js jquery.easing.1.3.js.pagespeed.jc.cJU2nST1rd.js">
+  </script>
+  <script>
+    eval(mod_pagespeed_rVm3b6OPfk);
+  </script>
+  <script>
+    eval(mod_pagespeed_LPyuAhQnNQ);
+  </script>
+  <script>
+    eval(mod_pagespeed_CUI$FcHZ3n);
+  </script>
+  <script>
+    eval(mod_pagespeed_uu3xvHn3aM);
+  </script>
+  <script
+    src="js/jquery.waypoints.min.js jquery.stellar.min.js owl.carousel.min.js jquery.magnific-popup.min.js.pagespeed.jc.OS2-fzYR9P.js">
+  </script>
+  <script>
+    eval(mod_pagespeed_bnqGepMR5q);
+  </script>
+  <script>
+    eval(mod_pagespeed_aLNiYpeva5);
+  </script>
+  <script>
+    eval(mod_pagespeed_gRe8OWKk8x);
+  </script>
+  <script>
+    eval(mod_pagespeed_iLrrPnlANI);
+  </script>
+  <script
+    src="js/aos.js jquery.animateNumber.min.js scrollax.min.js bootstrap-datepicker.js jquery.timepicker.min.js google-map.js.pagespeed.jc.yIWJqF4mH7.js">
+  </script>
+  <script>
+    eval(mod_pagespeed_zEQqWyOm9T);
+  </script>
+  <script>
+    eval(mod_pagespeed_tWYv1TXJtB);
+  </script>
+  <script>
+    eval(mod_pagespeed_06R1GUdeKg);
+  </script>
+  <script>
+    eval(mod_pagespeed_l1Joqva7dO);
+  </script>
+  <script>
+    eval(mod_pagespeed_GIt_XDyLcs);
+  </script>
+  <script src="../../maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+  <script>
+    eval(mod_pagespeed_yzNEB6woqD);
+  </script>
+  <script src="js/main.js"></script>
 
-<script async="" src="../../gtag/js.js?id=UA-23581568-13"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async="" src="../../gtag/js.js?id=UA-23581568-13"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-23581568-13');
-</script>
-<script defer="" src="../../beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"6c28d0c0dc29850d","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.12.0","si":100}' crossorigin="anonymous"></script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-23581568-13');
+  </script>
+  <script defer="" src="../../beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194"
+    integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw=="
+    data-cf-beacon='{"rayId":"6c28d0c0dc29850d","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.12.0","si":100}'
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
