--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <li><a href="#"><span class="icon-instagram"></span></a></li>
                   </ul>
                   <h5>Contact me here!</h5>
-                  <p>Email: <a href="#"><span class="__cf_email__"
+                  <p>Email: <a href="mailto:hope.kartik@gmail.com"><span class="__cf_email__"
                         data-cfemail="e2808781898a838fa2878f838b8e">[email&#160;protected]</span></a></p>
                   <p>Phone: <a href="#">(123)-456-789</a></p>
                 </div>
