--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="../../css.css?family=Poppins:300,400,700" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="images/KG_logo.png">
+  <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
+  <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet"
     href="css/A.open-iconic-bootstrap.min.css animate.css owl.carousel.min.css owl.theme.default.min.css magnific-popup.css aos.css ionicons.min.css bootstrap-datepicker.css jquery.timepicker.css flaticon.css icomoon.cs.css">
 </head>
@@ -87,18 +89,18 @@
             <div class="col-md-2"></div>
             <div class="col-md-6 wrap ftco-animate">
               <div class="about-desc">
-                <h1 class="bold-text">About</h1>
+                <!-- <h1 class="bold-text">About</h1> -->
                 <div class="p-5">
                   <h2 class="mb-5">Hi! I'm Kartik Gupta</h2>
                   <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
                     the blind texts. Separated they live in.</p>
                   <p><a href="#">Checkout my resume</a></p>
-                  <ul class="ftco-footer-social list-unstyled mt-4">
-                    <li><a href="#"><span class="icon-twitter"></span></a></li>
-                    <li><a href="#"><span class="icon-facebook"></span></a></li>
-                    <li><a href="#"><span class="icon-instagram"></span></a></li>
+                  <ul class="navt list-unstyled mt-2 mb-2">
+                    <li class="socialinks mr-4"><a class="navt-link" href="#"><span class="iconify icon" data-icon="logos:twitter" data-width="30" ></span></a></li>
+                    <li class="socialinks mr-4"><a class="navt-link" href="#"><span class="icon-facebook"></span></a></li>
+                    <li class="socialinks mr-4"><a class="navt-link" href="#"><span class="icon-instagram"></span></a></li>
                   </ul>
-                  <h5>Contact me here!</h5>
+                  <h5 class="mt-2" style="margin-top: 0.8em;">Contact me here!</h5>
                   <p>Email: <a href="mailto:hope.kartik@gmail.com"><span class="__cf_email__"
                         data-cfemail="e2808781898a838fa2878f838b8e">[email&#160;protected]</span></a></p>
                   <p>Phone: <a href="#">(123)-456-789</a></p>
@@ -328,7 +330,7 @@
                   src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                 <script>
                   document.write(new Date().getFullYear());
-                </script> 
+                </script>
               </p>
             </div>
           </div>
