--- a/about.html
+++ b/about.html
@@ -2,11 +2,13 @@
 <html lang="en">
 
 <head>
-  <title>Beckham - Free Bootstrap 4 Template by Colorlib</title>
+  <title>Kartik Gupta</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="../../css.css?family=Poppins:300,400,700" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="images/KG_logo.png">
+  <script src="js/iconify.min.js"></script>
+  <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet"
     href="css/A.open-iconic-bootstrap.min.css animate.css owl.carousel.min.css owl.theme.default.min.css magnific-popup.css aos.css ionicons.min.css bootstrap-datepicker.css jquery.timepicker.css flaticon.css icomoon.cs.css">
 </head>
@@ -20,7 +22,7 @@
     <nav id="colorlib-main-nav" role="navigation">
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
       <div class="js-fullheight colorlib-table">
-        <div class="img" style="background-image:url(images/author-2.jpg)"></div>
+        <div class="img" style="background-image:url(images/developer-2.jpg)"></div>
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
@@ -55,26 +57,25 @@
       <section class="ftco-section about-section">
         <div class="container">
           <div class="row d-flex my-5" data-scrollax-parent="true">
-            <div class="col-md-4 author-img" style="background-image:url(images/author-1.jpg)"
+            <div class="col-md-4 author-img" style="background-image:url(images/developer-1.jpg)"
               data-scrollax=" properties: { translateY: '-70%'}"></div>
             <div class="col-md-2"></div>
             <div class="col-md-6 wrap ftco-animate">
               <div class="about-desc">
-                <h1 class="bold-text">About</h1>
+                <!-- <h1 class="bold-text">About</h1> -->
                 <div class="p-5">
-                  <h2 class="mb-5">Hi! I'm Beckham Muff</h2>
+                  <h2 class="mb-5">Hi! I'm Kartik Gupta</h2>
                   <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
                     the blind texts. Separated they live in.</p>
-                  <p><a href="#">Checkout my resume</a></p>
-                  <ul class="ftco-footer-social list-unstyled mt-4">
-                    <li><a href="#"><span class="icon-twitter"></span></a></li>
-                    <li><a href="#"><span class="icon-facebook"></span></a></li>
-                    <li><a href="#"><span class="icon-instagram"></span></a></li>
+                  <p><a href="Documents/Kartik Gupta.pdf" download="Resume_Kartik_Gupta.pdf">Checkout my resume</a></p>
+                  <ul class="navt list-unstyled mt-2 mb-2">
+                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://github.com/kg-0805"><span class="iconify icon" data-icon="akar-icons:github-fill" data-width="30"></span></a></li>
+                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://www.linkedin.com/in/kg-0805/"><span class="iconify icon" data-icon="akar-icons:linkedin-fill" data-width="30" ></span></a></li>
+                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://twitter.com/kg_0805"><span class="iconify icon" data-icon="ant-design:twitter-circle-filled" data-width="30" ></span></a></li>
                   </ul>
-                  <h5>Contact me here!</h5>
-                  <p>Email: <a href="#"><span class="__cf_email__"
-                        data-cfemail="c6a4a3a5adaea7ab86a3aba7afaa">[email&#160;protected]</span></a></p>
-                  <p>Phone: <a href="#">(123)-456-789</a></p>
+                  <h5 style="margin-top: 0.8em;">Contact me here!</h5>
+                  <p>Email: <a href="mailto:hope.kartik@gmail.com"><span>hope.kartik@gmail.com</span></a></p>
+                  <p>Phone: <a href="tel:+917772851232">+91-7772851232</a></p>
                 </div>
               </div>
             </div>
@@ -88,94 +89,66 @@
                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
                   the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
                   language ocean.</p>
-                <div class="row my-5">
-                  <div class="col-md-6">
-                    <p><strong>Name:</strong> <span>Beckham Muff</span></p>
-                    <p><strong>Address:</strong> <span>88 West 21th Street, Suite 721 New York NY 10016</span></p>
-                    <p><strong>Phone:</strong> <span>(123)-456-789</span></p>
-                  </div>
-                  <div class="col-md-6">
-                    <p><strong>Name:</strong> <span>Beckham Muff</span></p>
-                    <p><strong>Address:</strong> <span>88 West 21th Street, Suite 721 New York NY 10016</span></p>
-                    <p><strong>Phone:</strong> <span>(123)-456-789</span></p>
-                  </div>
-                </div>
+                
               </div>
               <div class="exp mt-5 ftco-animate">
                 <h2 class="mb-4">Experience</h2>
                 <div class="exp-wrap py-4">
                   <div class="desc">
-                    <h4>UX &amp; Interaction Designer <span> - Google Company</span> </h4>
-                    <p class="location">Germany - Berlin</p>
+                    <h4>Developer <span> - Digital India Corporation (MeitY)</span> </h4>
+                    <p class="location">Indore, India</p>
                   </div>
                   <div class="year">
-                    <p>2017 - Present</p>
+                    <p>Nov 2021 - Present</p>
                   </div>
                 </div>
                 <div class="exp-wrap py-4">
                   <div class="desc">
-                    <h4>UX &amp; UI Designer <span> - QBootstrap.com</span> </h4>
-                    <p class="location">Germany - Berlin</p>
+                    <h4>Software Engineer Trainee <span> - Infogain Solutions Pvt. Ltd.</span> </h4>
+                    <p class="location">Pune - India</p>
                   </div>
                   <div class="year">
-                    <p>2015 - 2017</p>
+                    <p>June 2021 - Nov 2021</p>
                   </div>
                 </div>
                 <div class="exp-wrap py-4">
                   <div class="desc">
-                    <h4>Designer &amp; Developer <span> - Themeforest.net</span> </h4>
-                    <p class="location">Germany - Berlin</p>
+                    <h4>Technical Intern <span> - Quantazone Inc.</span> </h4>
+                    <p class="location">Pune - India</p>
                   </div>
                   <div class="year">
-                    <p>2014 - 2015</p>
+                    <p>Feb 2020 - May 2020</p>
                   </div>
                 </div>
-                <div class="exp-wrap py-4">
-                  <div class="desc">
-                    <h4>Front-End Developer <span> - Big Comany</span> </h4>
-                    <p class="location">Germany - Berlin</p>
-                  </div>
-                  <div class="year">
-                    <p>2012 - 2014</p>
-                  </div>
-                </div>
+                
               </div>
               <div class="exp mt-5 ftco-animate">
                 <h2 class="mb-4">Education</h2>
                 <div class="exp-wrap py-4">
                   <div class="desc">
-                    <h4>Master Degree in Computer Science<span> - Harvard University</span> </h4>
-                    <p class="location">Germany - Berlin</p>
+                    <h4>Bachelor of Technology in Computer Science &amp; Engineering<span> - Dr. Vishwanath Karad MIT World Peace University</span> </h4>
+                    <p class="location">Pune - India</p>
                   </div>
                   <div class="year">
-                    <p>2013 - 2014</p>
+                    <p>2017 - 2021</p>
                   </div>
                 </div>
                 <div class="exp-wrap py-4">
                   <div class="desc">
-                    <h4>Bacheclor of Science in Computer Science<span> - Harvard University</span> </h4>
-                    <p class="location">Germany - Berlin</p>
+                    <h4>Senior Secondry Eduction(Class 12)<span> - C.B.S.E</span> </h4>
+                    <p class="location">Indore - India</p>
                   </div>
                   <div class="year">
-                    <p>2009 - 2012</p>
+                    <p>2016 - 2017</p>
                   </div>
                 </div>
                 <div class="exp-wrap py-4">
                   <div class="desc">
-                    <h4>Diploma in Information Technology<span> - Oxford University</span> </h4>
-                    <p class="location">Germany - Berlin</p>
+                    <h4>Secondry Education(Class 10)<span> - C.B.S.E</span> </h4>
+                    <p class="location">Indore - India</p>
                   </div>
                   <div class="year">
-                    <p>2008 - 2010</p>
-                  </div>
-                </div>
-                <div class="exp-wrap py-4">
-                  <div class="desc">
-                    <h4>Front-End Developer <span> - Big Comany</span> </h4>
-                    <p class="location">Germany - Berlin</p>
-                  </div>
-                  <div class="year">
-                    <p>2012 - 2014</p>
+                    <p>2014 - 2015</p>
                   </div>
                 </div>
               </div>
@@ -187,51 +160,18 @@
             </div>
             <div class="col-md-6 animate-box">
               <div class="progress-wrap">
-                <h4>Photoshop</h4>
+                <h4>C Language</h4>
                 <div class="progress">
-                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                    aria-valuemax="100" style="width:75%">
-                    <span>75%</span>
+                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="65" aria-valuemin="0"
+                    aria-valuemax="100" style="width:65%">
+                    <span>65%</span>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
               <div class="progress-wrap">
-                <h4>jQuery</h4>
-                <div class="progress">
-                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                    aria-valuemax="100" style="width:60%">
-                    <span>60%</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 animate-box">
-              <div class="progress-wrap">
-                <h4>HTML5</h4>
-                <div class="progress">
-                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="85" aria-valuemin="0"
-                    aria-valuemax="100" style="width:85%">
-                    <span>85%</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-              <div class="progress-wrap">
-                <h4>CSS3</h4>
-                <div class="progress">
-                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="90" aria-valuemin="0"
-                    aria-valuemax="100" style="width:90%">
-                    <span>90%</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 animate-box">
-              <div class="progress-wrap">
-                <h4>WordPress</h4>
+                <h4>C++ Language</h4>
                 <div class="progress">
                   <div class="progress-bar color-1" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                     aria-valuemax="100" style="width:70%">
@@ -240,13 +180,46 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+            <div class="col-md-6 animate-box">
               <div class="progress-wrap">
-                <h4>SEO</h4>
+                <h4>HTML5</h4>
                 <div class="progress">
                   <div class="progress-bar color-1" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                     aria-valuemax="100" style="width:80%">
                     <span>80%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+              <div class="progress-wrap">
+                <h4>CSS3</h4>
+                <div class="progress">
+                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                    aria-valuemax="100" style="width:70%">
+                    <span>70%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 animate-box">
+              <div class="progress-wrap">
+                <h4>WordPress</h4>
+                <div class="progress">
+                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="762" aria-valuemin="0"
+                    aria-valuemax="100" style="width:62%">
+                    <span>62%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+              <div class="progress-wrap">
+                <h4>Project Management</h4>
+                <div class="progress">
+                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="73" aria-valuemin="0"
+                    aria-valuemax="100" style="width:72%">
+                    <span>72%</span>
                   </div>
                 </div>
               </div>
@@ -259,16 +232,15 @@
           <div class="row mb-5 justify-content-center">
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
-                <ul class="ftco-footer-social list-unstyled">
-                  <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <ul class="navt list-unstyled" style="margin-left: 70px;">
+                  <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://github.com/kg-0805"><span class="iconify icon" data-icon="akar-icons:github-fill" data-width="50"></span></a></li>
+                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://www.linkedin.com/in/kg-0805/"><span class="iconify icon" data-icon="akar-icons:linkedin-fill" data-width="50" ></span></a></li>
+                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://twitter.com/kg_0805"><span class="iconify icon" data-icon="ant-design:twitter-circle-filled" data-width="50" ></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#"><span class="__cf_email__"
-                      data-cfemail="94fdfaf2fbd4f1f9f5fdf8baf7fbf9">[email&#160;protected]</span></a></p>
+                <p class="h3 email"><a href="mailto:hope.kartik@gmail.com"><span>hope.kartik@gmail.com</span></a></p>
               </div>
             </div>
           </div>
@@ -279,8 +251,7 @@
                   src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                 <script>
                   document.write(new Date().getFullYear());
-                </script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"
-                  style="color: red;"></i> by <a href="../../index.htm" target="_blank">Colorlib</a>
+                </script> All rights reserved | Kartik Gupta
               </p>
             </div>
           </div>
