--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="../../css.css?family=Poppins:300,400,700" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="images/KG_logo.png">
-  <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
+  <script src="js/iconify.min.js"></script>
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet"
     href="css/A.open-iconic-bootstrap.min.css animate.css owl.carousel.min.css owl.theme.default.min.css magnific-popup.css aos.css ionicons.min.css bootstrap-datepicker.css jquery.timepicker.css flaticon.css icomoon.cs.css">
@@ -94,16 +94,15 @@
                   <h2 class="mb-5">Hi! I'm Kartik Gupta</h2>
                   <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
                     the blind texts. Separated they live in.</p>
-                  <p><a href="#">Checkout my resume</a></p>
+                  <p><a href="Documents/Kartik Gupta.pdf" download="Resume_Kartik_Gupta.pdf">Checkout my resume</a></p>
                   <ul class="navt list-unstyled mt-2 mb-2">
-                    <li class="socialinks mr-4"><a class="navt-link" href="#"><span class="iconify icon" data-icon="logos:twitter" data-width="30" ></span></a></li>
-                    <li class="socialinks mr-4"><a class="navt-link" href="#"><span class="icon-facebook"></span></a></li>
-                    <li class="socialinks mr-4"><a class="navt-link" href="#"><span class="icon-instagram"></span></a></li>
+                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://github.com/kg-0805"><span class="iconify icon" data-icon="akar-icons:github-fill" data-width="30"></span></a></li>
+                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://www.linkedin.com/in/kg-0805/"><span class="iconify icon" data-icon="akar-icons:linkedin-fill" data-width="30" ></span></a></li>
+                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://twitter.com/kg_0805"><span class="iconify icon" data-icon="ant-design:twitter-circle-filled" data-width="30" ></span></a></li>
                   </ul>
-                  <h5 class="mt-2" style="margin-top: 0.8em;">Contact me here!</h5>
-                  <p>Email: <a href="mailto:hope.kartik@gmail.com"><span class="__cf_email__"
-                        data-cfemail="e2808781898a838fa2878f838b8e">[email&#160;protected]</span></a></p>
-                  <p>Phone: <a href="#">(123)-456-789</a></p>
+                  <h5 style="margin-top: 0.8em;">Contact me here!</h5>
+                  <p>Email: <a href="mailto:hope.kartik@gmail.com"><span>hope.kartik@gmail.com</span></a></p>
+                  <p>Phone: <a href="tel:+917772851232">+91-7772851232</a></p>
                 </div>
               </div>
             </div>
@@ -310,10 +309,10 @@
           <div class="row mb-5 justify-content-center">
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
-                <ul class="ftco-footer-social list-unstyled">
-                  <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <ul class="navt list-unstyled" style="margin-left: 70px;">
+                  <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://github.com/kg-0805"><span class="iconify icon" data-icon="akar-icons:github-fill" data-width="50"></span></a></li>
+                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://www.linkedin.com/in/kg-0805/"><span class="iconify icon" data-icon="akar-icons:linkedin-fill" data-width="50" ></span></a></li>
+                    <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://twitter.com/kg_0805"><span class="iconify icon" data-icon="ant-design:twitter-circle-filled" data-width="50" ></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
