--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
                 <li class="active"><a href="about.html"><span><small>02</small>Resume</span></a></li>
                 <li><a href="services.html"><span><small>03</small>Services</span></a></li>
                 <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-                <li><a href="blog.html"><span><small>05</small>Blog</span></a></li>
-                <li><a href="contact.html"><span><small>06</small>Contact</span></a></li>
+                <!-- <li><a href="blog.html"><span><small>05</small>Blog</span></a></li> -->
+                <li><a href="contact.html"><span><small>05</small>Contact</span></a></li>
               </ul>
             </div>
           </div>
@@ -65,8 +65,7 @@
                 <!-- <h1 class="bold-text">About</h1> -->
                 <div class="p-5">
                   <h2 class="mb-5">Hi! I'm Kartik Gupta</h2>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                    the blind texts. Separated they live in.</p>
+                  <p>I am a B.tech. Computer Science Engineer skilled in HTML, CSS, JAVA &amp; many other fields.  I can manage a project comfortably. I love to read about new technologies. And whenever I get time I try to practice and try new problems.</p>
                   <p><a href="Documents/Kartik Gupta.pdf" download="Resume_Kartik_Gupta.pdf">Checkout my resume</a></p>
                   <ul class="navt list-unstyled mt-2 mb-2">
                     <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://github.com/kg-0805"><span class="iconify icon" data-icon="akar-icons:github-fill" data-width="30"></span></a></li>
@@ -84,11 +83,9 @@
             <div class="col-md-10">
               <div class="profile ftco-animate">
                 <h2 class="mb-4">Profile</h2>
-                <h4 class="mb-4">I'm a UI/UX Designer &amp; Frontend Developer from London, UK. I aim to make a
+                <h4 class="mb-4">I'm a Developer from Indore, India . I aim to make a
                   difference through my creative solution.</h4>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                  the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
-                  language ocean.</p>
+                <p>I am a B.tech. Computer Science Engineer skilled in HTML, CSS, JAVA &amp; many other fields.  I can manage a project comfortably. I love to read about new technologies. And whenever I get time I try to practice and try new problems.</p>
                 
               </div>
               <div class="exp mt-5 ftco-animate">
@@ -232,7 +229,7 @@
           <div class="row mb-5 justify-content-center">
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
-                <ul class="navt list-unstyled" style="margin-left: 117.5px;">
+                <ul class="navt list-unstyled" style="margin-left: 117.5px;" >
                   <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://github.com/kg-0805"><span class="iconify icon" data-icon="akar-icons:github-fill" data-width="50"></span></a></li>
                     <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://www.linkedin.com/in/kg-0805/"><span class="iconify icon" data-icon="akar-icons:linkedin-fill" data-width="50" ></span></a></li>
                     <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://twitter.com/kg_0805"><span class="iconify icon" data-icon="ant-design:twitter-circle-filled" data-width="50" ></span></a></li>
