--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <div class="col-md-12 text-center">
               <h1 class="mb-4"><a href="index.html" class="logo">Kartik Gupta</a></h1>
               <ul>
-                <li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
-                <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
-                <li><a href="services.html"><span><small>03</small>Services</span></a></li>
-                <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
+                <li class="active"><a href="index"><span><small>01</small>Home</span></a></li>
+                <li><a href="about"><span><small>02</small>Resume</span></a></li>
+                <li><a href="services"><span><small>03</small>Services</span></a></li>
+                <li><a href="portfolio"><span><small>04</small>Portfolio</span></a></li>
                 <!-- <li><a href="blog.html"><span><small>05</small>Blog</span></a></li> -->
-                <li><a href="contact.html"><span><small>05</small>Contact</span></a></li>
+                <li><a href="contact"><span><small>05</small>Contact</span></a></li>
               </ul>
             </div>
           </div>
