--- a/contact.html
+++ b/contact.html
@@ -75,28 +75,12 @@
           </div>
           <div class="row block-9">
             <div class="col-md-6 pr-md-5">
-              <form method="post" action="javascript:sendmail()">
-                <div class="form-group">
-                  <input type="text" name="name" id="Name" class="form-control" placeholder="Your Name">
-                </div>
-                <div class="form-group">
-                  <input type="text" name="email" id="Mail" class="form-control" placeholder="Your Email">
-                </div>
-                <div class="form-group">
-                  <input type="text" name="subject" id="Subject" class="form-control" placeholder="Subject">
-                </div>
-                <div class="form-group">
-                  <textarea name="" id="" cols="30" rows="7" id="Message" class="form-control" name="message"
-                    placeholder="Message"></textarea>
-                </div>
-                <div class="form-group">
-                  <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
-                </div>
-              </form>
+              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd8qoG8GqUsvv_R79NkmBozYj01tgYBWuiFuouF8t1Eqq2qRg/viewform?embedded=true" width="640" height="835" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
             <div class="col-md-6" id="map"></div>
           </div>
         </div>
+        
       </section>
       <footer class="ftco-footer ftco-bg-dark ftco-section">
         <div class="container">
@@ -223,7 +207,7 @@
        //console.log(name, phone, email, message);
  
        Email.send({
-         Host : "smtp.kartikgupta.tech.",
+         Host : "smtp.kartikgupta.tech",
          Username : "admin@kartikgupta.tech",
          Password : "YR#$ytv8",
          To: 'hope.kartik@gmail.com',
