--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
               <p><span>Email:</span> <a href="mailto:hope.kartik@gmail.com">hope.kartik@gmail.com</a></p>
             </div>
             <div class="col-md-3">
-              <p><span>Website:</span> <a href="kartikgupta.tech">kartikgupta.tech</a></p>
+              <p><span>Website:</span> <a href="https://kartikgupta.tech">kartikgupta.tech</a></p>
             </div>
           </div>
           <div class="row block-9">
@@ -192,49 +192,7 @@
     data-cf-beacon='{"rayId":"6c28d0c0dc29850d","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.12.0","si":100}'
     crossorigin="anonymous"></script>
 
-    <script>  
-
-      function sendmail(){
-     
-       var name = $('#Name').val();
-       var email = $('#EMAIL').val();
-       var subject = $('#Subject').val();
-       var message = $('#Message').val();
- 
-       // var body = $('#body').val();
- 
-       var Body='Name: '+name+'<br>Email: '+email+'<br>Subject: '+subject+'<br>Message: '+message;
-       //console.log(name, phone, email, message);
- 
-       Email.send({
-         Host : "smtp.kartikgupta.tech",
-         Username : "admin@kartikgupta.tech",
-         Password : "YR#$ytv8",
-         To: 'hope.kartik@gmail.com',
-         From: "admin@kartikgupta.tech",
-         Subject: "New message on contact from "+name,
-         Body: Body
-       }).then(
-         message =>{
-           //console.log (message);
-           if(message=='OK'){
-           alert('Your mail has been send. Thank you for connecting.');
-           }
-           else{
-             console.error (message);
-             alert('There is error at sending message. ')
-             
-           }
- 
-         }
-       );
- 
- 
- 
-     }
- 
- 
-     </script>
+   
 
 </body>
 
