--- a/contact.html
+++ b/contact.html
@@ -95,8 +95,7 @@
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#"><span class="__cf_email__"
-                      data-cfemail="e881868e87a88d85898184c68b8785">[email&#160;protected]</span></a></p>
+                <p class="h3 email"><a href="mailto:hope.kartik@gmail.com">hope.kartik@gmail.com</a></p>
               </div>
             </div>
           </div>
