--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
                 <!-- <h1 class="bold-text">About</h1> -->
                 <div class="p-5">
                   <h2 class="mb-5">Hi! I'm Kartik Gupta</h2>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                    the blind texts. Separated they live in.</p>
+                  <p>I am a B.tech. Computer Science Engineer skilled in HTML, CSS, JAVA &amp; many other fields.  I can manage a project comfortably. I love to read about new technologies. And whenever I get time I try to practice and try new problems.</p>
                   <p><a href="Documents/Kartik Gupta.pdf" download="Resume_Kartik_Gupta.pdf">Checkout my resume</a></p>
                   <ul class="navt list-unstyled mt-2 mb-2">
                     <li class="socialinks" style="margin-right: 2px;"><a class="navt-link" href="https://github.com/kg-0805"><span class="iconify icon" data-icon="akar-icons:github-fill" data-width="30"></span></a></li>
@@ -132,9 +131,9 @@
               <div class="media block-6 services p-3 py-4 d-block text-center">
                 <div class="icon mb-3"><span class="icon-gears"></span></div>
                 <div class="media-body">
-                  <h3 class="heading">Product Strategy</h3>
-                  <h3 class="heading">Design Sprints</h3>
-                  <h3 class="heading">UX Strategy</h3>
+                  <h3 class="heading">SEO</h3>
+                  <h3 class="heading">Webiste Rank builder</h3>
+                  <h3 class="heading">Website optimize</h3>
                 </div>
               </div>
             </div>
@@ -142,9 +141,9 @@
               <div class="media block-6 services p-3 py-4 d-block text-center">
                 <div class="icon mb-3"><span class="icon-code"></span></div>
                 <div class="media-body">
+                  <h3 class="heading">Website Development</h3>
                   <h3 class="heading">HTML/CSS</h3>
                   <h3 class="heading">Prototyping</h3>
-                  <h3 class="heading">User Testing</h3>
                 </div>
               </div>
             </div>
