--- a/services.html
+++ b/services.html
@@ -77,9 +77,9 @@
               <div class="media block-6 services p-3 py-4 d-block text-center">
                 <div class="icon mb-3"><span class="icon-gears"></span></div>
                 <div class="media-body">
-                  <h3 class="heading">Product Strategy</h3>
-                  <h3 class="heading">Design Sprints</h3>
-                  <h3 class="heading">UX Strategy</h3>
+                  <h3 class="heading">SEO</h3>
+                  <h3 class="heading">Webiste Rank builder</h3>
+                  <h3 class="heading">Website optimize</h3>
                 </div>
               </div>
             </div>
@@ -87,9 +87,9 @@
               <div class="media block-6 services p-3 py-4 d-block text-center">
                 <div class="icon mb-3"><span class="icon-code"></span></div>
                 <div class="media-body">
+                  <h3 class="heading">Website Development</h3>
                   <h3 class="heading">HTML/CSS</h3>
                   <h3 class="heading">Prototyping</h3>
-                  <h3 class="heading">User Testing</h3>
                 </div>
               </div>
             </div>
@@ -109,20 +109,18 @@
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#"><span class="__cf_email__"
-                      data-cfemail="036a6d656c43666e626a6f2d606c6e">[email&#160;protected]</span></a></p>
+                <p class="h3 email"><a href="mailto:hope.kartik@gmail.com">hope.kartik@gmail.com</a></p>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 text-center">
               <p>
-                Copyright &copy;<script data-cfasync="false"
+                Kartik Gupta &copy;<script data-cfasync="false"
                   src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                 <script>
                   document.write(new Date().getFullYear());
-                </script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"
-                  style="color: red;"></i> by <a href="../../index.htm" target="_blank">Colorlib</a>
+                </script>
               </p>
             </div>
           </div>
