--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Beckham - Free Bootstrap 4 Template by Colorlib</title>
+  <title>Kartik Gupta</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="../../css.css?family=Poppins:300,400,700" rel="stylesheet">
@@ -22,7 +22,7 @@
     <nav id="colorlib-main-nav" role="navigation">
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
       <div class="js-fullheight colorlib-table">
-        <div class="img" style="background-image:url(images/author-2.jpg)"></div>
+        <div class="img" style="background-image:url(images/developer-2.jpg)"></div>
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
@@ -195,20 +195,18 @@
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#"><span class="__cf_email__"
-                      data-cfemail="4920272f26092c24282025672a2624">[email&#160;protected]</span></a></p>
+                <p class="h3 email"><a href="mailto:hope.kartik@gmail.com">hope.kartik@gmail.com</a></p>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 text-center">
               <p>
-                Copyright &copy;<script data-cfasync="false"
+                Kartik Gupta &copy;<script data-cfasync="false"
                   src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                 <script>
                   document.write(new Date().getFullYear());
-                </script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"
-                  style="color: red;"></i> by <a href="../../index.htm" target="_blank">Colorlib</a>
+                </script>
               </p>
             </div>
           </div>
